--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Right Panel -->
         <div class="panel panel-right">
             <div class="side-text side-text-signup">
-                <h4>New Here?</h4>
+                <h4>Are you the one among us?</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi at ducimus eaque magnam modi ut veniam dolorem, quos laborum aperiam.</p>
                 <button id="signup-mode-btn" style="display: block;" class="btn btn-side-text">Sign Up</button>
                 <img src="svg/login.svg" alt="" height="350">
