--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <div style="" class="side-text side-text-signin">
                 <h4>New Here?</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi at ducimus eaque magnam modi ut veniam dolorem, quos laborum aperiam.</p>
-                <button id="signin-mode-btn" class="btn btn-side-text">Login</button>
+                <button style="display: block;" id="signin-mode-btn" class="btn btn-side-text">Login</button>
+                <img src="svg/register.svg" alt="" height="340">
             </div>
         </div>
         <!-- Right Panel -->
