--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <form action="">
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="username">
+                        <input id="username-login" type="text" placeholder="username">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="password">
+                        <input id="password-login" type="password" placeholder="password">
                     </div>
-                    <div class="button"><button class="btn btn-submit" type="submit">Login</button></div>
+                    <div class="button"><button class="btn btn-submit" id="login-btn" type="submit">Login</button></div>
                 </form>
                 <p class="social-text">Or sign in with social platforms</p>
                 <div class="social-media">
@@ -50,20 +50,20 @@
                 <button id="signup-mode-btn" style="display: block;" class="btn btn-side-text">Sign Up</button>
                 <img src="svg/login.svg" alt="" height="350">
             </div>
-            <div style="" class="form form-signup">
+            <div class="form form-signup">
                 <h3 class="title">Sign up</h3>
                 <form action="">
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="username">
+                        <input id="username-signup" type="text" placeholder="username">
                     </div>
                     <div class="input-field">
                         <i class="fa fa-envelope"></i>
-                        <input type="email" placeholder="Email">
+                        <input id="email-signup" type="email" placeholder="Email">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="password">
+                        <input id="password-signup" type="password" placeholder="password">
                     </div>
                     <div class="button"><button id="signup-btn" class="btn btn-submit" type="submit">Sign Up</button></div>
                 </form>
